appId: com.mmazzarolo.breathly
name: Show two-digit exercise time limit
---
- clearState
- launchApp
- extendedWaitUntil:
    visible:
      id: "home.screen"
    timeout: 10000
- tapOn:
    id: "home.experience.breathing.increase"
- tapOn:
    id: "home.experience.breathing.increase"
- tapOn:
    id: "home.experience.breathing.increase"
- tapOn:
    id: "home.experience.breathing.increase"
- tapOn:
    id: "home.experience.breathing.increase"
- assertVisible:
    id: "home.experience.breathing.value"
    text: "10 min"
